Add checklist note functionality to board
Introduced a new 'add checklist' button in the UI, allowing users to create checklist notes alongside text notes. Updated script.js to handle checklist creation, item addition, and deletion. Improved styling for notes and checklist items in style.css.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
         <header>header</header>
         <div id="top-section"></div>
-        <button id="add-note">add</button>
+        <button id="add-note">add text note</button>
+        <button id="add-checklist">add checklist</button>
         <div id="board"></div>
         <footer>footer</footer>
         <script src="script.js"></script>
