Attempt one of making things snappy
Tried to use Math.round to round up the coordinates of the notes, but it does not work for some reason

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="top-section"></div>
         <button id="add-note">add text note</button>
         <button id="add-checklist">add checklist</button>
+        <button id="toggle-snap">"clampy" release</button>
         <div id="board"></div>
         <footer>footer</footer>
         <script src="script.js"></script>
