--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div id="top-section"></div>
         <button id="add-note">add text note</button>
         <button id="add-checklist">add checklist</button>
-        <button id="toggle-snap">"clampy" release</button>
+        <button id="toggle-snap">Mode: Free drag</button>
+        <button id="card swap mode">Coming soon</button>
         <div id="board"></div>
         <footer>footer</footer>
         <script src="script.js"></script>
