Implement grid snapping for drag mode
Added logic to snap dragged elements to a 50px grid when in grid snap mode (snappyMode == 3). Also updated button label in index.html for clarity.

Now what's left is fixing one last time the z-index.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="top-section"></div>
         <button id="add-note">add text note</button>
         <button id="add-checklist">add checklist</button>
-        <button id="toggle-snap">Mode: Free drag</button>
+        <button id="toggle-snap">Drag mode: Free drag</button>
         <button id="card swap mode">Coming soon</button>
         <div id="board"></div>
         <footer>footer</footer>
