--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="top-section"></div>
         <button id="add-note">add text note</button>
         <button id="add-checklist">add checklist</button>
-        <button id="toggle-snap">Drag mode: Free drag</button>
-        <button id="card swap mode">Coming soon</button>
+        <button id="toggle-snap">Drag mode: Free drag, no snap</button>
+        <button id="card-swap-mode">Mode: drag</button>
         <div id="board"></div>
         <footer>footer</footer>
         <script src="script.js"></script>
