Changed the variable names
It felt very unprofessional and I was getting lost in my own madness

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <button id="add-checklist">add checklist</button>
         <button id="toggle-snap">Drag mode: Free drag, no snap</button>
         <button id="card-swap-mode">Mode: drag</button>
-        <div id="board"></div>
+        <div id="board">
+        </div>
         <footer>footer</footer>
         <script src="script.js"></script>
 
