--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
 
-        <header>header</header>
+        <header>[header]</header>
         <div id="top-section"></div>
         <button id="add-note">add text note</button>
         <button id="add-checklist">add checklist</button>
@@ -18,7 +18,7 @@
         <button id="card-swap-mode">Mode: drag</button>
         <div id="board">
         </div>
-        <footer>footer</footer>
+        <footer>[footer]</footer>
         <script src="script.js"></script>
 
     </body>
