Adding the customization features
starting with resizing
-also ficed the issue where dragging would select text

--- a/index.html
+++ b/index.html
@@ -2,26 +2,32 @@
 
 <html lang="en">
 
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <meta charset="utf-8">
-        <title>Notes App</title>
-    </head>
+          <head>
+                    <link rel="stylesheet" href="style.css">
+                    <meta charset="utf-8">
+                    <title>Notes App</title>
+          </head>
 
-    <body>
+          <body>
 
-        <header>[header]</header>
-        <div id="top-section"></div>
-        <button id="add-note">add text note</button>
-        <button id="add-checklist">add checklist</button>
-        <button id="toggle-snap">Drag mode: Free drag, no snap</button>
-        <button id="card-swap-mode">Mode: drag</button>
-        <div id="board">
-        </div>
-        <footer>[footer]</footer>
-        <script src="script.js"></script>
+                    <header>[header]</header>
+                    <div id="top-section"></div>
+                    <button id="add-note">add text note</button>
+                    <button id="add-checklist">add checklist</button>
+                    <button id="toggle-snap">Drag mode: Free drag, no snap</button>
+                    <button id="card-swap-mode">Mode: drag</button>
+                    <div id="board"></div>
+                    <div id="note-settings">
+                              <button id="resize-button"></button>
+                              <div id="height"></div>
+                              <div id="width"></div>
+                              <div id="color-picker"></div>
+                              <div id="color-palette"></div>
+                    </div>
+                    <footer>[footer]</footer>
+                    <script src="script.js"></script>
 
-    </body>
+          </body>
 
 
 </html>
