Added resize and color wheel
yeah and some bug fixes

next: fixe the mode swap and rewrite the drag logic

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
                     <button id="card-swap-mode">Mode: drag</button>
                     <div id="board"></div>
                     <div id="note-settings">
-                              <button id="resize-button"></button>
-                              <div id="height"></div>
-                              <div id="width"></div>
-                              <div id="color-picker"></div>
-                              <div id="color-palette"></div>
+                              <p>note customization</p>
+                              <button id="toggle-resize">resize notes: on</button>
+                              <div id="color-picker">
+                                <p>change note color</p>
+                                <input id="color-picker-input" type="color">
+                                <button id="confirm-color">confirm</button>
+                              </div>
                     </div>
-                    <footer>[footer]</footer>
                     <script src="script.js"></script>
 
           </body>
