New note builder function (not working yet)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <button id="clear-board">Delete All</button>
         <button id="card-swap-mode">Mode: drag</button>
       </div>
+      <div class="settings-group">
+        <input id="search-bar">
+        <button id="search-button">search</button>
+      </div>
 
       <div class="settings-group">
         <label>Note Color</label>
