Add image note support with file input UI
Introduces the ability to add image notes to the board via a new file input in the UI. Updates script.js to handle image note creation, saving, and loading, and styles the file input in style.css. Also improves button labeling for clarity.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
   <div class="settings-group">
     <button id="add-note" aria-label="Add a new note">Add Note</button>
     <button id="add-checklist" aria-label="Add a new checklist">Add Checklist</button>
+    <div class="file-input-wrapper">
+      <input type="file" accept="image/*" id="add-image" aria-label="Add a new image">
+      <label for="add-image" class="file-input-label">Add Image</label>
+    </div>
   </div>
 
   <div class="settings-group">
-    <button id="toggle-snap" aria-label="Toggle drag mode">Toggle Mode</button>
+    <button id="toggle-snap" aria-label="Toggle drag mode">Toggle Snap Mode</button>
     <button id="toggle-resize" aria-label="Toggle note resizing">resize notes: on</button>
     <button id="clear-board" aria-label="Delete all notes and checklists">Delete All</button>
     <button id="card-swap-mode" aria-label="Toggle between drag and swap mode">Mode: drag</button>
